_css/style.scss
@import "bootstrap";
@import "fontawesome";
@import "regular";
@import "arvo";
@import "cardo";
@import "roboto";

// Our variables
$base-font-family: 'Roboto', serif;
$base-font-size:   16px;
$base-font-weight: 400;
$small-font-size:  $base-font-size * 0.875;
$base-line-height: 1.5;

$secondary-font-family: 'Arvo', serif;
$ternary-font-family: 'Cardo', serif;

$spacing-unit:     30px;

$text-color:       #111;
$background-color: #f9f7f2;
$brand-color:      #d5ae43;

$grey-color:       #828282;
$grey-color-light: lighten($grey-color, 40%);
$grey-color-dark:  darken($grey-color, 25%);

// Width of the content area
$content-width:    800px;

$on-palm:          600px;
$on-laptop:        800px;

:root {
  --bs-border-color-translucent: #d5ae43;
}

[v-cloak] {
  display: none;
}

body {
  background-color: $background-color;
}

a {
  color: #2199e8;
  text-decoration: none;
}

p {
  margin-bottom: 30px;
}

#header {
  svg {
    margin: 60px 0 20px;
  }
}

#main-menu {
  border-top: 1px solid $brand-color;
  border-bottom: 1px solid $brand-color;
  margin-bottom: 25px;

  a {
    color: #000;
    font-size: 14px;
    margin: 0 17px;
    text-transform: uppercase;

    span {
      color: $brand-color;
      font-family: $secondary-font-family;
      font-size: 20px;
      display: block;
      line-height: 30px;
    }
  }
}

#secondary-menu {
  list-style-type: none;
  margin-top: 40px;
  padding: 0;

  a {
    color: #000;
    padding: 5px 0;
    text-decoration: none;
  }
}

@include media-breakpoint-up(lg) {
  #sidebar {
    margin-top: 56px;
  }
}

#sidebar {
  img {
    margin-bottom: 40px;
  }
  .read-more {
    background: url('data:image/svg+xml;utf8,<svg width="300px" height="11px" viewBox="-2 9 300 11" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g id="arrow" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(0.000000, 10.000000)"><path d="M261.5,4.5 L289.517851,4.5" id="Line" stroke="#D5AE43" stroke-width="3" stroke-linecap="square"></path><path d="M0.471524771,4.5 L158.517851,4.5" id="Line-Copy" stroke="#D5AE43" stroke-width="3" stroke-linecap="square"></path><polygon id="Triangle-2" stroke="#D5AE43" fill="#D5AE43" points="287 9 287 0 296 4.5"></polygon></g></svg>')  no-repeat;
    background-position-x: -28px;
    background-position-y: 3px;
    display: block;
    margin-bottom: 20px;
    padding-left: 148px;
    width: 100%;
  }
  h4 {
    font-family: $secondary-font-family;
  }
}

a:hover {
  color: #000;
  text-decoration: none;
}

.read-more {
  color: $brand-color;
  font-family: $secondary-font-family;
  font-size: 12px;
  font-weight: bold;
  text-transform: uppercase;

  .btn {
    background-color: var(--bs-border-color-translucent);
    color: #fff;
    font-size: 12px;

    &:hover {
      background-color: #000;
    }
  }
}

.button {
  background-color: $brand-color;
  margin-bottom: -20px;
  &:hover {
    background-color: #000;
  }
}

.card {
  background-color: #fff;
  margin-bottom: 30px;
  h2 {
    font-family: $ternary-font-family;
    font-size: 44px;
    font-weight: bold;
    line-height: 52px;
    padding: 20px 0;
  }
  .card-header {
    background-color: #ebe5d7;
    padding: 10px 20px;

    h3 {
      font-size: 16px;
      font-weight: bold;
      margin-bottom: 0;
      text-transform: uppercase;
    }
    time {
      float: right;
    }
  }
  .author {
    color: #777;
    display: block;
    font-weight: bold;
    margin-bottom: 10px;
  }
  .read-more {
    display: block;
    text-align: right;
  }
}

.fa-regular {
  color: #d5ae43;
}

